# CORAL

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
blog/: index.html
coral/: _version.py  config.py  types.py
examples/drawing2cad/grader/: pyproject.toml
examples/drawing2cad/grader/src/drawing2cad_grader/: __init__.py  consumer.py  dataset.py  grader.py  runner.py  scoring.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/: .gitignore  README.md  full_metric_logs.json  metrics.json  requirements.txt
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/: __init__.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Eval/: __init__.py  _main.py  code_metrics.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Eval/execution/: __init__.py  _utils.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Eval/geometry/: __init__.py  _utils.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Inference/: __init__.py  _base.py  _openai_api.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Processing/: __init__.py  _base.py  _basicprocessor.py  _vlmprocessor.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/CADBench/Processing/utils/: cad_utils.py  iou_sampling.py  pc_utils.py  render_utils.py
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/scripts/: collect_metrics.py  convert_and_eval.sh  download_stls.py  eval_jsonl.py  eval_jsonl_modified.py  eval_local.py  eval_vlm.py  metric_compute_batch_gen.py  run_batch_metrics.sh  run_qwen_nothinking27B.sh
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_claude_jsons/bench0_claude/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_claude_jsons/bench1A_claude/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gemini_jsons/bench0_gemini31_thinking_run2/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gemini_jsons/bench1A_gemini31_run1/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gemini_jsons/bench1B_gemini31_run2/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gpt_jsons/bench0_gpt/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gpt_jsons/bench0_gpt_run1/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gpt_jsons/bench1A_gpt_run1/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_gpt_jsons/bench1B_gpt_run1/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_qwen_jsons/bench0_qwen/qwen27b/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_qwen_jsons/bench0_qwen/qwen27b_run2/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_qwen_jsons/bench0_qwen/qwen27b_run3/: easy.json  hard.json  medium.json
examples/drawing2cad/grader/src/drawing2cad_grader/CADBenchEval/tested_vlms/cadbench_qwen_jsons/bench1A_qwen3vl8b/: easy.json  hard.json  medium.json
(+286 files in other folders)
