[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coral"
dynamic = ["version"]
description = "Orchestration system for autonomous coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11, <3.14"
authors = [
    { name = "CORAL Team" }
]
keywords = [
    "ai",
    "agents",
    "autonomous",
    "orchestration",
    "evaluation",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "httpx>=0.27",
    "uvicorn>=0.30.0",
    "litellm[proxy]==1.82.3",
    "pip>=26.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
ui = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
]
all = [
    "coral[dev,ui]",
]

[project.scripts]
coral = "coral.cli:main"

[project.urls]
Homepage = "https://github.com/Human-Agent-Society/CORAL"
Repository = "https://github.com/Human-Agent-Society/CORAL"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "coral/_version.py"

[tool.hatch.build]
exclude = [
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["coral"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    # Auto-generated by hatch-vcs at build time; contents (and formatting)
    # depend on the current git state, so linting it produces spurious CI
    # failures whenever the regenerated formatting differs from what's
    # committed.
    "coral/_version.py",
    # Per-task seed code lives under examples/*/seed/ and is meant to mirror
    # whatever upstream repo the agents will edit. We don't own that code and
    # shouldn't enforce CORAL's style on it.
    "examples",
    # Agent-authored solution dumps used for blog/showcase purposes — not
    # framework code.
    "demos",
    # Local-only directories. `.claude/worktrees/` is created at runtime by
    # `coral start` and is never tracked; `docs/` and `blog/` are JS/MDX, not
    # Python.
    ".claude/worktrees",
    "docs",
    "blog",
]

[tool.ruff.lint]
# S101 bans `assert` outside tests/ — asserts vanish under `python -O`, so
# main code must use guards or real exceptions instead.
select = ["E", "F", "I", "N", "W", "UP", "S101"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
