[project]
name = "drawing2cad-grader"
version = "0.1.0"
description = "CORAL grader for the drawing2cad task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "datasets",   # load the private test set / build the eval dataset
    "pillow",     # image handling for the consumer
    "openai",     # OpenAI-compatible consumer client
    "numpy",
    # Scoring (CADBench) deps are added when scoring.py is wired in, e.g.:
    #   "trimesh", "pymeshlab", "open3d", "pebble", "cadquery", "manifold3d"
    # CADBench itself is not pip-installable; imported via args.cadbench_path.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drawing2cad_grader"]
